CSRF fix. See http://weblog.rubyonrails.org/2011/2/8/csrf-protection-bypass-in-ruby-on-rails

--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -9,9 +9,12 @@
   <%= stylesheet_link_tag('rails_admin/dashboard') %>
 
   <%= javascript_include_tag('rails_admin/prototype.js') %>
+  <%= javascript_include_tag('rails_admin/rails.js') %>
+
   <%= javascript_include_tag('rails_admin/scriptaculous.js') %>
   <%= javascript_include_tag('rails_admin/dashboard.js') %>
 
+  <%= csrf_meta_tag %>
 </head>
 <body>
   <div id="wrapper">
