--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -7,8 +7,11 @@
   <%= stylesheet_link_tag('rails_admin/create.css') %>
 
   <%= javascript_include_tag('rails_admin/prototype.js') %>
+  <%= javascript_include_tag('rails_admin/rails.js') %>
+
   <%= javascript_include_tag('rails_admin/prototype-base-extensions.js') %>
   <%= javascript_include_tag('rails_admin/prototype-date-extensions.js') %>
+
   <%= javascript_include_tag('rails_admin/datepicker.js') %>
   <%= javascript_include_tag('rails_admin/associations.js') %>
   <%= javascript_include_tag('ckeditor/ckeditor.js') if File.exists?(File.join(Rails.root, 'public/javascripts/ckeditor/ckeditor.js')) %>
@@ -48,6 +51,7 @@
 
   </script>
 
+  <%= csrf_meta_tag %>
 </head>
 
 <body>
